[gd_scene load_steps=19 format=3 uid="uid://c5o4fhjssrhfe"]

[ext_resource type="Script" uid="uid://bahow6f5ngikg" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://c05ihd0uyrbss" path="res://Assets/Player/tile_0085.png" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://ek4hd052qhkx" path="res://Assets/Player/tile_0103.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://qvlgebu38khv" path="res://Assets/Player/attack.png" id="4_vgqql"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 20.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
height = 52.0

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.46313453]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -4.9999995)]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0714145, -0.00629282]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10.999998, -6), Vector2(5.000001, -13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkybt"]
_data = {
&"RESET": SubResource("Animation_vgqql"),
&"idle": SubResource("Animation_6t5aa")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgqql"]
size = Vector2(52, 33)

[sub_resource type="Animation" id="Animation_x3wgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "attack"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3smsa"]
_data = {
&"RESET": SubResource("Animation_x3wgy"),
&"attack": SubResource("Animation_fkybt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vgqql"]
radius = 40.0

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "dash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8erm5"]
resource_name = "not_dash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f1ek2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx1dd"]
_data = {
&"RESET": SubResource("Animation_f1ek2"),
&"dash": SubResource("Animation_3smsa"),
&"not_dash": SubResource("Animation_8erm5")
}

[node name="Player" type="CharacterBody2D"]
z_index = 70
script = ExtResource("1_cvnsp")

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2(-18.000002, -19.000002)
scale = Vector2(3.2, 3.2)
texture = ExtResource("2_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-18, -18)
shape = SubResource("CapsuleShape2D_vgqql")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-18, -3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_fkybt")

[node name="SwordSprite" type="Sprite2D" parent="."]
position = Vector2(30, -4.9999995)
rotation = 0.46313453
scale = Vector2(2, 2)
texture = ExtResource("3_6t5aa")

[node name="SwordAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fkybt")
}
autoplay = "idle"

[node name="Attack" type="Area2D" parent="." groups=["weapons"]]
visible = false
position = Vector2(-18, -18)

[node name="AttackSprite" type="Sprite2D" parent="Attack"]
position = Vector2(43.999996, 0.9999962)
rotation = 1.5707964
scale = Vector2(3.2, 3.2)
texture = ExtResource("4_vgqql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(38, 1)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_vgqql")
disabled = true

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3smsa")
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Collector" type="Area2D" parent="." groups=["collectors"]]
visible = false

[node name="CollectorCollision" type="CollisionShape2D" parent="Collector"]
position = Vector2(-18, -18)
shape = SubResource("CircleShape2D_vgqql")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tx1dd")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
